<resources>
    <string name="app_name">MyFinances2020</string>

    <string name="launch_title">Welcome to MyFinances</string>

    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>


    <!-- Fragment Home -->
    <string name="balance">Balance:</string>
    <string name="delete_trans_ques">Are you sure you want to delete this transaction?</string>


    <!-- Fragment Graphs -->
    <string name="no_data_found">No data found for this month</string>


    <!-- Auth UI - Signed in -->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="graphs">Graphs</string>

    <string name="save">Save</string>


    <!-- AddTransactionActivity -->
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_trans_suc">Transaction added successfully</string>


    <!-- WalletsActivity -->
    <string name="delete_wallet_question">Are you sure you want to delete this wallet?</string>


    <!-- AddWalletActivity and EditWalletActivity -->
    <string name="name">Name</string>
    <string name="initial_balance">Initial Balance</string>
    <string name="add_wallet_suc">Wallet added successfully</string>
    <string name="delete">Delete</string>


    <!-- BackupOrRestoreActivity -->
    <string name="textGoogleDrive">Google Drive Backup/Restore</string>
    <string name="btnConnectDrive">Connect with Google Drive</string>
    <string name="localBackup">Local Backup/Restore</string>
    <string name="checkboxBackup">Backup automatically</string>
    <string name="backupFile">Backup to file</string>
    <string name="restoreFile">Restore from File</string>
    <string name="alertDialogBackup">This will override your previous backup. Are you sure you want to do it?</string>
    <string name="backup_success">File backed up successfully!</string>
    <string name="backup_fail">Failed to backup file.</string>
    <string name="alertDialogRestore">This will override your current data. Are you sure you want to do this?</string>
    <string name="restore_success">File restored successfully!</string>
    <string name="file_not_found">There is no backup file.</string>


    <!-- DriveActivity -->
    <string name="backupDrive">Backup to Google Drive</string>
    <string name="restoreDrive">Restore from Google Drive</string>
    <string name="backup_drive_success">File backed up to Google Drive successfully!</string>
    <string name="backup_drive_fail">Failed to backup file to Google Drive.</string>
    <string name="alertDialogDriveRestore">This will override your current data on Google Drive. Are you sure you want to do this?</string>
    <string name="restore_drive_success">File restored from Google Drive successfully!</string>
    <string name="restore_drive_fail">Failed to restore file from Google Drive.</string>
    <string name="drive_file_not_found">There is no backup file on Google Drive.</string>
    <string name="choose_Account">Choose Account</string>


    <!-- Settings activity -->
    <string name="auto_local_backup">Backup automatically to local storage</string>
    <string name="auto_drive_backup">Backup automatically to Google Drive</string>
    <string name="show_perc_graph">Show percentages on the pie chart</string>
    <string name="show_subt_graph">Show subtitles on the pie chart</string>


    <!-- About Activity-->
    <string name="about_text">This application was developed in the scope of the Mobile computing course of 2018 by 2 students:\n\n
    - Adriana Cunha\n
    - Rúben Saldanha</string>


    <!-- Action bar -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="export">Export</string>
    <string name="drive_sync">Backup/Restore</string>
    <string name="add_wallet">Wallets</string>
    <string name="calendar">Calendar</string>

    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="add_loan">Add Loan</string>
    <string name="edit_loan">Edit Loan</string>


    <!-- menu -->
    <string name="action_scan">UPLOAD file</string>
    <string name="action_list">DOWNLOAD all files</string>
    <string name="action_delete">DELETE all files</string>
    <string name="action_account">Select Google Account…</string>

    <string name="err_auth_sha">CHECK PackageName / SHA1\nin Developers Console!</string>
    <string name="err_auth_dono">UNSPECIFIED GOOGLE DRIVE\nACCESS FAILURE!</string>
    <string name="err_auth_accpick">NO ACCOUNT SELECTED!</string>
    <string name="err_auth_nogo">ACCESS NOT AUTHORIZED!</string>

    <!--loans-->
    <string name="loans">Loans</string>
    <string name="add_loan_suc">Loan added successfully</string>
    <string name="edit_loan_suc">Loan edited successfully</string>
    <string name="thirdP">Third party</string>
    <string name="lender">I\'m the lender</string>
    <string name="lendee">I\'m the lendee</string>
    <string name="date">Date</string>
    <string name="delete_loan_ques">Are you sure you want to delete this loan?</string>
    <string name="payed">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="label">Category Name</string>
    <string name="pick">Category color</string>
    <string name="add_cat_suc">category successfully added</string>
    <string name="btn_color">Color</string>
    <string name="loan_type">Loan type</string>
    <string name="loan_status">Loan status</string>
    <string name="category">Category</string>
    <string name="transaction_type">Transaction type</string>
    <string name="make_current_Wallet">Make this the current wallet?</string>
    <string name="currency">Currency</string>
    <string name="loanee">Loanee:</string>
    <string name="loan_amount">Loan amount:</string>
</resources>
