<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.transactions.addTransaction.AddTransactionFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.myfinances2020.ui.transactions.addTransaction.AddTransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen16">

        <TextView
            android:id="@+id/t_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_date"
            android:onClick="@{() -> viewModel.onPickDate()}"/>

        <TextView
            android:id="@+id/text_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/category"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_date" />

        <Spinner
            android:id="@+id/spinner_add_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/ubuntu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cat" />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/transaction_type"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_add_categories" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_type">

            <RadioButton
                android:id="@+id/expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen16"
                android:layout_marginBottom="@dimen/dimen8"
                android:fontFamily="@font/ubuntu"
                android:text="@string/expense"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:onClick="@{() -> viewModel.onExpenseClicked()}"/>

            <RadioButton
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/income"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:onClick="@{() -> viewModel.onIncomeClicked()}"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:layout_editor_absoluteX="-11dp">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryLight" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_amount"
            tools:layout_editor_absoluteX="-11dp">

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/comment"
                android:inputType="text"
                android:textColorHint="@color/colorPrimaryLight" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save_transaction"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:backgroundTint="@color/colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/input_comment"
            tools:layout_editor_absoluteX="-19dp"
            android:onClick="@{() -> viewModel.onReturnToTransactionsFragment()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>