<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.myfinances2020.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen16">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/currency"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/ubuntu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Switch
            android:id="@+id/show_percentages"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:fontFamily="@font/ubuntu"
            android:text="@string/show_perc_graph"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_currency"
            android:onClick="@{() -> viewModel.onShowPercentageClicked()}"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_light_gray"
            app:layout_constraintTop_toBottomOf="@+id/show_percentages"
            tools:layout_editor_absoluteX="7dp" />

        <Switch
            android:id="@+id/show_subtitles"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:fontFamily="@font/ubuntu"
            android:text="@string/show_subt_graph"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:onClick="@{() -> viewModel.onShowSubtitlesClicked()}"/>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_light_gray"
            app:layout_constraintTop_toBottomOf="@+id/show_subtitles"
            tools:layout_editor_absoluteX="-13dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>